src/index.css
@tailwind base;
@tailwind components;
@tailwind utilities;

.poppins {
    font-family: "Poppins", sans-serif;
}

.merriweather {
    font-family: 'Merriweather Sans', sans-serif;
}

.root {
    position: relative;
}

.animated-100 {
    @apply transition-all duration-100;
}

.animated-200 {
    @apply transition-all duration-200;
}

.animated-300 {
    @apply transition-all duration-300;
}

.animated-500 {
    @apply transition-all duration-500;
}

.animated-700 {
    @apply transition-all duration-700;
}

.inf-carousel {
    animation: infScrollAnimation 60s linear 0s infinite;
}

.inf-carousel-reversed {
    animation: infScrollAnimation 50s linear 0s infinite;
    animation-direction: reverse;
}

.inf-carousel-delayed {
    animation: infScrollAnimation 40s linear 0s infinite;
    animation-delay: -12s;
}

@keyframes infScrollAnimation {
    0% {
        left: 0px;
    }
    100% {
        left: -1050px;
    }
}

.grecaptcha-badge {
    display: none;
}

/* loading spinner */
.lds-dual-ring {
    display: inline-block;
    width: 80px;
    height: 80px;
}
.lds-dual-ring:after {
    content: " ";
    display: block;
    width: 64px;
    height: 64px;
    margin: 8px;
    border-radius: 50%;
    border: 6px solid rgb(153, 246, 228);
    border-color: rgb(153, 246, 228) transparent rgb(153, 246, 228) transparent;
    animation: lds-dual-ring 0.8s linear infinite;
}
@keyframes lds-dual-ring {
    0% {
        transform: rotate(0deg);
    }
    100% {
        transform: rotate(360deg);
    }
}

.loader {
    font-size: 10px;
    margin: 50px auto;
    text-indent: -9999em;
    width: 11em;
    height: 11em;
    border-radius: 50%;
    background: rgb(153, 246, 228);
    background: -moz-linear-gradient(left, rgb(153, 246, 228) 10%, rgba(255, 255, 255, 0) 42%);
    background: -webkit-linear-gradient(left, rgb(153, 246, 228) 10%, rgba(255, 255, 255, 0) 42%);
    background: -o-linear-gradient(left, rgb(153, 246, 228) 10%, rgba(255, 255, 255, 0) 42%);
    background: -ms-linear-gradient(left, rgb(153, 246, 228) 10%, rgba(255, 255, 255, 0) 42%);
    background: linear-gradient(to right, rgb(153, 246, 228) 10%, rgba(255, 255, 255, 0) 42%);
    position: relative;
    -webkit-animation: load3 1.4s infinite linear;
    animation: load3 1.4s infinite linear;
    -webkit-transform: translateZ(0);
    -ms-transform: translateZ(0);
    transform: translateZ(0);
}
.loader:before {
    width: 50%;
    height: 50%;
    background: rgb(153, 246, 228);
    border-radius: 100% 0 0 0;
    position: absolute;
    top: 0;
    left: 0;
    content: "";
}
.loader:after {
    background: rgb(9, 0, 26);
    width: 75%;
    height: 75%;
    border-radius: 50%;
    content: "";
    margin: auto;
    position: absolute;
    top: 0;
    left: 0;
    bottom: 0;
    right: 0;
}
@-webkit-keyframes load3 {
    0% {
        -webkit-transform: rotate(0deg);
        transform: rotate(0deg);
    }
    100% {
        -webkit-transform: rotate(360deg);
        transform: rotate(360deg);
    }
}
@keyframes load3 {
    0% {
        -webkit-transform: rotate(0deg);
        transform: rotate(0deg);
    }
    100% {
        -webkit-transform: rotate(360deg);
        transform: rotate(360deg);
    }
}
/* end of loading spinner */

/* scroll bar */

::-webkit-scrollbar {
    width: 10px;
    background-color: #000000;
}

::-webkit-scrollbar-track {
    background-color: #000000;
    /* border-radius: 100px; */
}

::-webkit-scrollbar-thumb {
    border-radius: 3px;
    /* border: 5px solid transparent; */
    background-clip: content-box;
    background-color: rgb(20, 184, 166);
}
::-webkit-scrollbar-thumb:hover {
    /* border-radius: 100px; */
    /* border: 5px solid transparent; */
    /* background-clip: content-box; */
    background-color: rgb(20, 184, 166);
}

/* end of scroll bar*/

/* flickering fix */
.no-flick {
    -webkit-backface-visibility: hidden;
    -moz-backface-visibility: hidden;
    -ms-backface-visibility: hidden;
}

/* end of flickering fix */

/* media quarries for 500 error */
.span-1 {
    font-size: xxx-large;
    font-weight: 600;
    color: white;
}
.span-2 {
    font-size: xx-large;
    font-weight: 500;
    color: rgb(236, 79, 79);
}
.span-3 {
    margin-top: 6px;
    font-size: x-large;
    color: rgb(45, 212, 191);
    font-weight: 400;
}
.span-4 {
    font-size: x-large;
    color: rgb(45, 212, 191);
    font-weight: 400;
}

@media only screen and (max-width: 500px) {
    .span-2 {
        font-size: x-large;
    }
    .span-3 {
        font-size: large;
    }
    .span-4 {
        font-size: large;
    }
}
/* end of media quarries for 500 error */

